--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          tags: hyp2nos/crm-app:${{ github.run_number }}
         
 
     
