--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/build-push-action@v6.7.0
         with:
           context: .
-          file: ./Dockerfile
+          file: Dockerfile
           push: true
           tags: hyp2nos/crm-app:${{ github.run_number }}
         
