--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,13 +27,10 @@ jobs:
         with:
           username: ${{ secrets.HUB_DOCKER_USERNAME }}
           password: ${{ secrets.HUB_DOCKER_PASSWORD }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          version: v0.7.0
       - name: Build and push Docker images
         uses: docker/build-push-action@v6.7.0
         with:
+          context: . 
           push: true
           tags: hyp2nos/crm-app:${{ github.run_number }}
         
