--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,19 +20,19 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
           cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3.3.0
-        with:
-          username: ${{ secrets.HUB_DOCKER_USERNAME }}
-          password: ${{ secrets.HUB_DOCKER_PASSWORD }}
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v6.7.0
-        with:
-          context: . 
-          push: true
-          tags: hyp2nos/crm-app:${{ github.run_number }}
+      # - name: Build with Maven
+      #   run: mvn -B package --file pom.xml
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v3.3.0
+      #   with:
+      #     username: ${{ secrets.HUB_DOCKER_USERNAME }}
+      #     password: ${{ secrets.HUB_DOCKER_PASSWORD }}
+      # - name: Build and push Docker images
+      #   uses: docker/build-push-action@v6.7.0
+      #   with:
+      #     context: . 
+      #     push: true
+      #     tags: hyp2nos/crm-app:${{ github.run_number }}
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.5.0
         with:
