--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,13 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: maven
+      - name: Générer une clé SSH
+        run: ssh-keygen -t rsa -b 4096 -f /home/runner/.ssh/id_rsa -N "" -C "github-action"
+
+      - name: Afficher la clé publique
+        run: cat /home/runner/.ssh/id_rsa.pub
+      # - uses: actions/checkout@v2
+      # - name: Set up JDK 17
+      #   uses: actions/setup-java@v2
+      #   with:
+      #     java-version: '17'
+      #     distribution: 'adopt'
+      #     cache: maven
       # - name: Build with Maven
       #   run: mvn -B package --file pom.xml
       # - name: Log in to Docker Hub
@@ -33,11 +38,11 @@ jobs:
       #     context: . 
       #     push: true
       #     tags: hyp2nos/crm-app:${{ github.run_number }}
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Test SSH
-        run: ssh valueit@valueit-OptiPlex-3040 "ls"
+      # - name: Setup SSH
+      #   uses: webfactory/ssh-agent@v0.5.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      # - name: Test SSH
+      #   run: ssh valueit@valueit-OptiPlex-3040 "ls"
 
     
