--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,42 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Ping
-        run: |
-          ping -c 4 41.207.54.18
-        
-      - name: Configurer SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H "41.207.54.18" >> ~/.ssh/known_hosts
-
-      - name: Se connecter via SSH et exécuter des commandes
-        run: ssh -o StrictHostKeyChecking=no valueit@41.207.54.18 "ls /"
-      # - uses: actions/checkout@v2
-      # - name: Set up JDK 17
-      #   uses: actions/setup-java@v2
-      #   with:
-      #     java-version: '17'
-      #     distribution: 'adopt'
-      #     cache: maven
-      # - name: Build with Maven
-      #   run: mvn -B package --file pom.xml
-      # - name: Log in to Docker Hub
-      #   uses: docker/login-action@v3.3.0
-      #   with:
-      #     username: ${{ secrets.HUB_DOCKER_USERNAME }}
-      #     password: ${{ secrets.HUB_DOCKER_PASSWORD }}
-      # - name: Build and push Docker images
-      #   uses: docker/build-push-action@v6.7.0
-      #   with:
-      #     context: . 
-      #     push: true
-      #     tags: hyp2nos/crm-app:${{ github.run_number }}
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3.3.0
+        with:
+          username: ${{ secrets.HUB_DOCKER_USERNAME }}
+          password: ${{ secrets.HUB_DOCKER_PASSWORD }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v6.7.0
+        with:
+          context: . 
+          push: true
+          tags: hyp2nos/crm-app:${{ github.run_number }}
       # - name: Setup SSH
       #   uses: webfactory/ssh-agent@v0.5.0
       #   with:
